[package]
name = "mc-sgx-css"
version = "0.1.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["development-tools", "encoding"]
description = "A brief summary of the crate"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["utility", "encoding", "sigstruct"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-sigstruct"
rust-version = "1.62.1"

[dependencies]
