[package]
name = "mc-sgx-css"
version = "0.1.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["development-tools", "encoding"]
description = "Enclave signature struct extractor"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["utility", "encoding", "sigstruct"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx-sigstruct"
rust-version = "1.62.1"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
nom = "7"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
textwrap = "0.16.0"
