[package]
name = "mc-sgx-css"
version = "0.1.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["[development-tools", "encoding]"]
description = "Enclave signature struct extractor"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["[utility", "encoding", "sigstruct]"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

# At least one crate must have this configuration
[package.metadata.release]
pre-release-replacements = [
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/sgx-sigstruct/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
nom = "7"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
textwrap = "0.16.0"
